--- a/cefapp/pyproject.toml
+++ b/cefapp/pyproject.toml
@@ -1,22 +1,23 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "cefapp"
-version = "0.10.1.post20230727"
+version = "0.10.0.1"
 authors = [
-  { name="National Institute of Information and Communications Technology", email="na5icn@ml.nict.go.jp" },
-  { name="Atsushi Ooka", email="a-ooka@nict.go.jp" },
+  { name = "National Institute of Information and Communications Technology", email = "na5icn@ml.nict.go.jp" },
+  { name = "Atsushi Ooka", email = "a-ooka@nict.go.jp" },
 ]
 description = "Cefore application library using cefpyco"
 readme = "README.md"
 requires-python = ">=3.7"
+license = { file = "LICENSE" }
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: BSD License 2.0",
-    "Operating System :: Linux OS or Mac OS",
+  "Programming Language :: Python :: 3",
+  "Operating System :: Linux OS or Mac OS",
 ]
+dependencies = ["cefpyco", "click", "rich"]
 
 [project.urls]
 "Homepage" = "https://cefore.net/"
@@ -25,7 +26,11 @@ classifiers = [
 "Handson in ICN-WS 2021 (JP)" = "https://github.com/cefore/2021-hands-on"
 "References in ICN-WS (JP)" = "https://www.ieice.org/~icn/?page_id=1208"
 
+[project.optional-dependencies]
+dev = ["pytest"]
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
 [tool.pytest.ini_options]
-pythonpath = [
-  "src"
-]
+pythonpath = ["src"]
