--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,4 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-pythonpath = [
-  "src",
-  "cefapp/src"
-]
+pythonpath = ["src", "cefapp/src"]
